--- a/localisation/country_SEV_l_english.yml
+++ b/localisation/country_SEV_l_english.yml
@@ -34,7 +34,8 @@ SEV_start_desc:0 ""
 #######################################################
 ##### IDEAS ###########################################
 #######################################################
-
+severianian_crown:0 "Severianian Crown"
+severianian_crown_desc:0 ""
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
