--- a/localisation/country_SEV_l_russian.yml
+++ b/localisation/country_SEV_l_russian.yml
@@ -34,7 +34,8 @@ SEV_start_desc:0 ""
 #######################################################
 ##### IDEAS ###########################################
 #######################################################
-
+severianian_crown:0 "Северянская Корона"
+severianian_crown_desc:0 "Северяной испокон веков единалично правят монархи.\nПредставители рода Свериных находятся у власти уже с тысячалетие и их право на престол неоспоримо.\nПоследний представитель рода Револьцовых, Альтидия Револьцова, готова вести страну в светлое и прогрессивное будущее."
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
