--- a/localisation/country_SEV_l_english.yml
+++ b/localisation/country_SEV_l_english.yml
@@ -39,3 +39,6 @@ severianian_crown_desc:0 ""
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
+severiana.0.t:0 "Start"
+severiana.0.d:0 ""
+severiana.0.a:0 "Let's go"
