--- a/localisation/country_SEV_l_russian.yml
+++ b/localisation/country_SEV_l_russian.yml
@@ -37,8 +37,17 @@ SEV_start_desc:0 ""
 severianian_crown:0 "Северянская Корона"
 severianian_crown_desc:0 "Северяной испокон веков единалично правят монархи.\nПредставители рода Свериных находятся у власти уже с тысячалетие и их право на престол неоспоримо.\nПоследний представитель рода Револьцовых, Альтидия Револьцова, готова вести страну в светлое и прогрессивное будущее."
 #######################################################
+##### DECISIONS #######################################
+#######################################################
+SEV_talks:0 "Необходимо переговорить с ближайшими друзьями и советниками"
+SEV_talk_to_sinister:0 "Поговорить с Синистером Серовым"
+#######################################################
 ##### EVENTS ##########################################
 #######################################################
 severiana.0.t:0 "Начало"
 severiana.0.d:0 ""
-severiana.0.a:0 "Поехали"
+severiana.0.a:0 "Поехали
+
+severiana.1.t:0 "Синистер говорит"
+severiana.1.d:0 "ХА ХА ХА ХА ХА"
+severiana.1.a:0 "Спасибо"
