Started working on the decisions

--- a/localisation/country_SEV_l_russian.yml
+++ b/localisation/country_SEV_l_russian.yml
@@ -29,18 +29,33 @@ SEV_communism_party_long:0 "Бунт"
 ##### FOCUSES #########################################
 #######################################################
 Severiana_focus:0 "Северянское Дерево Фокусов"
-SEV_start:0 "..."
-SEV_start_desc:0 ""
+SEV_start:0 "Новый год"
+SEV_start_desc:0 "Новые хлопоты, отчёты, проблемы..."
 #######################################################
 ##### IDEAS ###########################################
 #######################################################
 severianian_crown:0 "Северянская Корона"
 severianian_crown_desc:0 "Северяной испокон веков единалично правят монархи.\nПредставители рода Свериных находятся у власти уже с тысячалетие и их право на престол неоспоримо.\nПоследний представитель рода Револьцовых, Альтидия Револьцова, готова вести страну в светлое и прогрессивное будущее."
+
+no_talk_to_sinister:0 "Ещё не говорили"
+no_talk_to_nestor:0 "Ещё не говорили"
+no_talk_to_spiegel:0 "Ещё не говорили"
+no_talk_to_vasily:0 "Ещё не говорили"
+no_talk_to_danilka:0 "Ещё не говорили"
+no_talk_to_skorpin:0 "Ещё не говорили"
+no_talk_to_vinous:0 "Ещё не говорили"
+is_talking:0 "Уже с кем-то разговариваем"
 #######################################################
 ##### DECISIONS #######################################
 #######################################################
-SEV_talks:0 "Необходимо переговорить с ближайшими друзьями и советниками"
-SEV_talk_to_sinister:0 "Поговорить с Синистером Серовым"
+SEV_talks:0 "Поговорить с"
+SEV_talk_to_sinister:0 "Синистером Серовым"
+SEV_talk_to_nestor:0 "Нестором Луниным"
+SEV_talk_to_spiegel:0 "Спайком Шпигелем"
+SEV_talk_to_vasily:0 "Василием Панцушенко"
+SEV_talk_to_danilka:0 "Данилкой"
+SEV_talk_to_skorpin:0 "Юрием Скорпиным"
+SEV_talk_to_vinous:0 "Виноусом Костылёвым"
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
@@ -51,3 +66,27 @@ severiana.0.a:0 "Поехали
 severiana.1.t:0 "Синистер говорит"
 severiana.1.d:0 "ХА ХА ХА ХА ХА"
 severiana.1.a:0 "Спасибо"
+
+severiana.2.t:0 "Нестор говорит"
+severiana.2.d:0 "ХА ХА ХА ХА ХА"
+severiana.2.a:0 "Спасибо"
+
+severiana.3.t:0 "Шпигель говорит"
+severiana.3.d:0 "ХА ХА ХА ХА ХА"
+severiana.3.a:0 "Спасибо"
+
+severiana.4.t:0 "Василий говорит"
+severiana.4.d:0 "ХА ХА ХА ХА ХА"
+severiana.4.a:0 "Спасибо"
+
+severiana.5.t:0 "Данилка говорит"
+severiana.5.d:0 "ХА ХА ХА ХА ХА"
+severiana.5.a:0 "Спасибо"
+
+severiana.6.t:0 "Скорпин говорит"
+severiana.6.d:0 "ХА ХА ХА ХА ХА"
+severiana.6.a:0 "Спасибо"
+
+severiana.7.t:0 "Виноус говорит"
+severiana.7.d:0 "ХА ХА ХА ХА ХА"
+severiana.7.a:0 "Спасибо"
