--- a/localisation/country_SEV_l_english.yml
+++ b/localisation/country_SEV_l_english.yml
@@ -19,8 +19,8 @@ SEV_communism_ADJ:0 "Severianian"
 #######################################################
 SEV_fascism_party:0 "SSS"
 SEV_fascism_party_long:0 "Soyuz Spasenija Severa"
-SEV_neutrality_party:0 "Crown"
-SEV_neutrality_party_long:0 "Severianian Crown"
+SEV_neutrality_party:0 "Revolcovs"
+SEV_neutrality_party_long:0 "Revolcov Dinasty"
 SEV_democratic_party:0 "APK"
 SEV_democratic_party_long:0 "Associacija Progressivnih Knyazej"
 SEV_communism_party:0 "Bunt"
