--- a/localisation/country_SEV_l_russian.yml
+++ b/localisation/country_SEV_l_russian.yml
@@ -19,8 +19,8 @@ SEV_communism_ADJ:0 "Северянск"
 #######################################################
 SEV_fascism_party:0 "ССС"
 SEV_fascism_party_long:0 "Союз Спасения Севера"
-SEV_neutrality_party:0 "Корона"
-SEV_neutrality_party_long:0 "Северянская Корона"
+SEV_neutrality_party:0 "Револьцовы"
+SEV_neutrality_party_long:0 "Династия Револьцовых"
 SEV_democratic_party:0 "АПК"
 SEV_democratic_party_long:0 "Ассоциация Прогрессивных Князей"
 SEV_communism_party:0 "Бунт"
