--- a/localisation/country_SEV_l_english.yml
+++ b/localisation/country_SEV_l_english.yml
@@ -63,13 +63,13 @@ severiana.0.t:0 "Start"
 severiana.0.d:0 ""
 severiana.0.a:0 "Let's go"
 
-severiana.1.t:0 "Sinister says"
-severiana.1.d:0 "HA HA HA HA HA"
-severiana.1.a:0 "Thanks"
+severiana.1.t1:0 "Sinister says"
+severiana.1.d1:0 "HA HA HA HA HA"
+severiana.1.a1:0 "Thanks"
 
-severiana.2.t:0 "Nestor says"
-severiana.2.d:0 "HA HA HA HA HA"
-severiana.2.a:0 "Thanks"
+severiana.2.t1:0 "Nestor says"
+severiana.2.d1:0 "HA HA HA HA HA"
+severiana.2.a1:0 "Thanks"
 
 severiana.3.t:0 "Spiegel says"
 severiana.3.d:0 "HA HA HA HA HA"
