Ponypower to states. Mapping more cities.

--- a/localisation/country_SEV_l_russian.yml
+++ b/localisation/country_SEV_l_russian.yml
@@ -48,7 +48,7 @@ is_talking:0 "Уже с кем-то разговариваем"
 #######################################################
 ##### DECISIONS #######################################
 #######################################################
-SEV_talks:0 "Поговорить с"
+SEV_talks:0 "Поговорить с..."
 SEV_talk_to_sinister:0 "Синистером Серовым"
 SEV_talk_to_nestor:0 "Нестором Луниным"
 SEV_talk_to_spiegel:0 "Спайком Шпигелем"
