--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -759,7 +759,7 @@
  STATE_758:0 "STATE_758"
  STATE_759:0 "Novochernushsk"
  STATE_760:0 "STATE_760"
- STATE_761:0 "White Wheat"
+ STATE_761:0 "Loshadsk"
  STATE_762:0 "Nizhny Novokopitsk"
  STATE_763:0 "Krupochkino"
  STATE_764:0 "Severskoye"
@@ -770,9 +770,9 @@
  STATE_769:0 "Novorzhekovsk"
  STATE_770:0 "Booktogorsk"
  STATE_771:0 "Drozdniy"
- STATE_772:0 "STATE_772"
- STATE_773:0 "East Porridge Town"
- STATE_774:0 "STATE_774"
+ STATE_772:0 "Malinovka"
+ STATE_773:0 "Kashino"
+ STATE_774:0 "Landish Fields"
  STATE_775:0 "Kon'linskie Islands"
  STATE_776:0 "STATE_776"
  STATE_777:0 "St. Petershoof"
@@ -796,7 +796,7 @@
  STATE_795:0 "Polovskiy"
  STATE_796:0 "Smovskoy"
  STATE_797:0 "Muffinskoye"
- STATE_798:0 "STATE_798"
+ STATE_798:0 "Kukuruzza"
  STATE_799:0 "Hoofbeat"
  STATE_800:0 "Severgrad"
  STATE_801:0 "Cherryabinsk"
