--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -759,7 +759,7 @@
  STATE_758:0 "STATE_758"
  STATE_759:0 "Новочернушск"
  STATE_760:0 "STATE_760"
- STATE_761:0 "Белая Пшеница"
+ STATE_761:0 "Лошадск"
  STATE_762:0 "Нижний Новокопытск"
  STATE_763:0 "Крупочкино"
  STATE_764:0 "Северское"
@@ -770,9 +770,9 @@
  STATE_769:0 "Новоржековск"
  STATE_770:0 "Буктогорск"
  STATE_771:0 "Дроздный"
- STATE_772:0 "STATE_772"
- STATE_773:0 "Восточный Порридж Таун"
- STATE_774:0 "STATE_774"
+ STATE_772:0 "Малиновка"
+ STATE_773:0 "Кашино"
+ STATE_774:0 "Земляные Поля"
  STATE_775:0 "Коньлинские Острова"
  STATE_776:0 "STATE_776"
  STATE_777:0 "Санкт-Петерсхуф"
@@ -796,7 +796,7 @@
  STATE_795:0 "Половский"
  STATE_796:0 "Смовской"
  STATE_797:0 "Маффинское"
- STATE_798:0 "STATE_798"
+ STATE_798:0 "Кукурузза"
  STATE_799:0 "Хуфбит"
  STATE_800:0 "Северград"
  STATE_801:0 "Черрябинск"
