--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -294,6 +294,7 @@ VICTORY_POINTS_11624:0 "Krasnoye Serdtse" #Krasnoye Serdtse
 VICTORY_POINTS_25:0 "Somland" #Somland
 VICTORY_POINTS_12244:0 "Zelenogradsk" #Zelenogradsk
 VICTORY_POINTS_11984:0 "Mirazh" #Mirazh
+VICTORY_POINTS_12005:0 ""
 VICTORY_POINTS_12129:0 "Tikhorechenskoye" #Tikhorechenskoye
 VICTORY_POINTS_199:0 "Bordo" #Bordo
 VICTORY_POINTS_12120:0 "Kobylkyno" #Kobylkyno
@@ -301,9 +302,9 @@ VICTORY_POINTS_4369:0 "Novochernushsk" #Novochernushsk
 VICTORY_POINTS_1542:0 "Novokopitsk"
 VICTORY_POINTS_11883:0 "Baical" #Baical
 VICTORY_POINTS_394:0 "Severskoye" #Severskoye
-VICTORY_POINTS_11299:0 "East Porridge Town" #East Porridge Town
+VICTORY_POINTS_11299:0 "Kashino" #Kashino
 VICTORY_POINTS_11638:0 "Krupochkino" #Krupochkino
-VICTORY_POINTS_5132:0 "White Wheat" #White Wheat
+VICTORY_POINTS_5132:0 "Loshadsk" #Loshadsk
 VICTORY_POINTS_3549:0 "Nizhny Novokopitsk" #Nizhny Novokopitsk
 VICTORY_POINTS_11338:0 "Skakunsk" #Skakunsk
 VICTORY_POINTS_4808:0 "Pluga" #Pluga
@@ -392,8 +393,40 @@ VICTORY_POINTS_10830:0 "Lyulino"
 VICTORY_POINTS_2932:0 "Pivno"
 VICTORY_POINTS_2890:0 "Bukhovo" #Bukhovo
 VICTORY_POINTS_4626:0 "Vishnepon'"
+VICTORY_POINTS_5039:0 ""
 VICTORY_POINTS_3005:0 "Bezdna" #Bezdna
 VICTORY_POINTS_11233:0 "Loshadsk"
+VICTORY_POINTS_5016:0 "" #STATE_829
+VICTORY_POINTS_2727:0 "" #STATE_831
+VICTORY_POINTS_2963:0 "" #STATE_832
+VICTORY_POINTS_11244:0 "Skorpin's Mansion" #STATE_785
+VICTORY_POINTS_11035:0 ""
+VICTORY_POINTS_11385:0 "" #STATE_776
+VICTORY_POINTS_11481:0 ""
+VICTORY_POINTS_11482:0 "" #STATE_781
+VICTORY_POINTS_538:0 "" #Korolevskiy Island
+VICTORY_POINTS_10419:0 "" #STATE_806
+VICTORY_POINTS_10225:0 ""
+VICTORY_POINTS_10496:0 "" #STATE_809
+VICTORY_POINTS_10496:0 ""
+VICTORY_POINTS_11057:0 "" #STATE_858
+VICTORY_POINTS_10821:0 ""
+VICTORY_POINTS_432:0 "" #Kukuruzza
+VICTORY_POINTS_11835:0 "" #Malinovka
+VICTORY_POINTS_11555:0 ""
+VICTORY_POINTS_11455:0 "" #STATE_765
+VICTORY_POINTS_11776:0 "" #STATE_766
+VICTORY_POINTS_3986:0 "" #STATE_741
+VICTORY_POINTS_11864:0 "" #STATE_758
+VICTORY_POINTS_4533:0 ""
+VICTORY_POINTS_11936:0 "" #STATE_753
+VICTORY_POINTS_11968:0 "" #STATE_756
+VICTORY_POINTS_1710:0 ""
+VICTORY_POINTS_2066:0 "" #STATE_754
+VICTORY_POINTS_11778:0 "" #STATE_757
+VICTORY_POINTS_11574:0 ""
+VICTORY_POINTS_2590:0 "" #STATE_729
+VICTORY_POINTS_1824:0 ""
 #STL - Starlight's Town
 VICTORY_POINTS_9978:0 "Novocrystal'sk" #Novocrystal'sk
 #######################################################################
