--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -473,6 +473,14 @@ VICTORY_POINTS_4648:0 "Plume Ville" #Plume Ville
 VICTORY_POINTS_10038:0 "Ny Winghagen" #Ny Winghagen
 VICTORY_POINTS_10102:0 "South Winghagen"
 VICTORY_POINTS_1179:0 "North Winghagen"
+VICTORY_POINTS_3787:0 ""
+VICTORY_POINTS_10133:0 "" #STATE_956
+VICTORY_POINTS_5699:0 "" #STATE_954
+VICTORY_POINTS_9724:0 ""
+VICTORY_POINTS_9550:0 "" #STATE_945
+VICTORY_POINTS_5514:0 ""
+VICTORY_POINTS_9622:0 "" #STATE_957
+VICTORY_POINTS_9419:0 "" #STATE_953
 #CNC - Northern Cities
 VICTORY_POINTS_2620:0 "STATE_995" #STATE_995
 VICTORY_POINTS_7185:0 "STATE_996" #STATE_996
