States and vp for GLF - Griffonian Liberation Front

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -497,10 +497,22 @@ VICTORY_POINTS_6797:0 "STATE_1017" #STATE_1017
 VICTORY_POINTS_1477:0 "Клув Хот" #Kluv Khot
 VICTORY_POINTS_9062:0 "Восточный Клув Хот"
 VICTORY_POINTS_1464:0 "Нию Мирабель" #Nieuw Mirabelle
+VICTORY_POINTS_9018:0 ""
 VICTORY_POINTS_3817:0 "Мёрон" #Mörön
 VICTORY_POINTS_9045:0 "Святая Йакская Роща"
 VICTORY_POINTS_8872:0 "Ухте" #Uchte
 VICTORY_POINTS_4356:0 "Западный Ухте"
+VICTORY_POINTS_9154:0 "" #STATE_935
+VICTORY_POINTS_3243:0 ""
+VICTORY_POINTS_8915:0 "" #STATE_1263
+VICTORY_POINTS_5629:0 "" #STATE_1258
+VICTORY_POINTS_9535:0 "" #STATE_1259
+VICTORY_POINTS_9501:0 ""
+VICTORY_POINTS_9447:0 "" #STATE_1252
+VICTORY_POINTS_793:0 ""
+VICTORY_POINTS_9286:0 "" #STATE_1260
+VICTORY_POINTS_9172:0 "" #STATE_1253
+VICTORY_POINTS_9008:0 "" #STATE_1262
 #MRF - Monarchist Restoration Front
 VICTORY_POINTS_3065:0 "Зеркшед Скалл" #Zerkshed Skäll
 VICTORY_POINTS_9047:0 "Северный Зеркшед Скалл"
