--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -498,10 +498,24 @@ VICTORY_POINTS_6797:0 "STATE_1017" #STATE_1017
 VICTORY_POINTS_1477:0 "Kluv Khot" #Kluv Khot
 VICTORY_POINTS_9062:0 "East Kluv Khot"
 VICTORY_POINTS_1464:0 "Nieuw Mirabelle" #Nieuw Mirabelle
+VICTORY_POINTS_9018:0 ""
 VICTORY_POINTS_3817:0 "Mörön" #Mörön
 VICTORY_POINTS_9045:0 "Holy Jak grove"
 VICTORY_POINTS_8872:0 "Uchte" #Uchte
 VICTORY_POINTS_4356:0 "West Uchte"
+VICTORY_POINTS_9154:0 "" #STATE_935
+VICTORY_POINTS_3243:0 ""
+VICTORY_POINTS_8915:0 "" #STATE_1263
+VICTORY_POINTS_5629:0 "" #STATE_1258
+VICTORY_POINTS_9535:0 "" #STATE_1259
+VICTORY_POINTS_9501:0 ""
+VICTORY_POINTS_9447:0 "" #STATE_1252
+VICTORY_POINTS_793:0 ""
+VICTORY_POINTS_9286:0 "" #STATE_1260
+VICTORY_POINTS_9172:0 "" #STATE_1253
+VICTORY_POINTS_9008:0 "" #STATE_1262
+VICTORY_POINTS_8704:0 ""
+VICTORY_POINTS_:0 ""
 #MRF - Monarchist Restoration Front
 VICTORY_POINTS_3065:0 "Zerkshed Skäll" #Zerkshed Skäll
 VICTORY_POINTS_9047:0 "North Zerkshed Skäll"
