--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -768,7 +768,7 @@
  STATE_767:0 "Пряничное"
  STATE_768:0 "Северхольм"
  STATE_769:0 "Новоржековск"
- STATE_770:0 "Буктогорск"
+ STATE_770:0 "Южный Гансегейербург"
  STATE_771:0 "Дроздный"
  STATE_772:0 "Малиновка"
  STATE_773:0 "Кашино"
@@ -1265,7 +1265,7 @@
  STATE_1264:0 "STATE_1264"
  STATE_1265:0 "STATE_1265"
  STATE_1266:0 "STATE_1266"
- STATE_1267:0 "STATE_1267"
+ STATE_1267:0 "Западный Ухте"
  STATE_1268:0 "STATE_1268"
  STATE_1269:0 "STATE_1269"
  STATE_1270:0 "STATE_1270"
@@ -1293,7 +1293,7 @@
  STATE_1292:0 "STATE_1292"
  STATE_1293:0 "STATE_1293"
  STATE_1294:0 "STATE_1294"
- STATE_1295:0 "STATE_1295"
+ STATE_1295:0 "Западный Гансегейербург"
  STATE_1296:0 "STATE_1296"
  STATE_1297:0 "STATE_1297"
  STATE_1298:0 "STATE_1298"
