--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -435,8 +435,8 @@ VICTORY_POINTS_9978:0 "Novocrystal'sk" #Novocrystal'sk
 #VICTORY_POINTS_:0 ""
 #GRF - Nova Griffonia
 VICTORY_POINTS_8721:0 "Gänsegeierburg" #Gänsegeierburg
-VICTORY_POINTS_1488:0 "West Gänsegeierburg"
-VICTORY_POINTS_4428:0 "South Gänsegeierburg"
+VICTORY_POINTS_1488:0 "West Gänsegeierburg" #West Gänsegeierburg
+VICTORY_POINTS_4428:0 "South Gänsegeierburg" #South Gänsegeierburg
 VICTORY_POINTS_8044:0 "Federstadt" #Federstadt
 VICTORY_POINTS_7713:0 "Bounnois" #Bounnois
 VICTORY_POINTS_4548:0 "River Bounnois"
@@ -502,7 +502,7 @@ VICTORY_POINTS_9018:0 ""
 VICTORY_POINTS_3817:0 "Mörön" #Mörön
 VICTORY_POINTS_9045:0 "Holy Jak grove"
 VICTORY_POINTS_8872:0 "Uchte" #Uchte
-VICTORY_POINTS_4356:0 "West Uchte"
+VICTORY_POINTS_4356:0 "West Uchte" #West Uchte
 VICTORY_POINTS_9154:0 "" #STATE_935
 VICTORY_POINTS_3243:0 ""
 VICTORY_POINTS_8915:0 "" #STATE_1263
@@ -514,8 +514,8 @@ VICTORY_POINTS_793:0 ""
 VICTORY_POINTS_9286:0 "" #STATE_1260
 VICTORY_POINTS_9172:0 "" #STATE_1253
 VICTORY_POINTS_9008:0 "" #STATE_1262
-VICTORY_POINTS_8704:0 ""
-VICTORY_POINTS_:0 ""
+VICTORY_POINTS_8704:0 "" #STATE_1264
+VICTORY_POINTS_8417:0 "" #STATE_1265
 #MRF - Monarchist Restoration Front
 VICTORY_POINTS_3065:0 "Zerkshed Skäll" #Zerkshed Skäll
 VICTORY_POINTS_9047:0 "North Zerkshed Skäll"
@@ -525,6 +525,23 @@ VICTORY_POINTS_9346:0 "West Nouveau Aquila"
 VICTORY_POINTS_3229:0 "North Nouveau Aquila"
 VICTORY_POINTS_9266:0 "Nouveau Aquila Port"
 VICTORY_POINTS_8833:0 "Klauwitz" #Klauwitz
+VICTORY_POINTS_9078:0 "" #STATE_946
+VICTORY_POINTS_4245:0 "" #STATE_947
+VICTORY_POINTS_125:0 ""
+VICTORY_POINTS_9053:0 "" #STATE_958
+VICTORY_POINTS_9090:0 ""
+VICTORY_POINTS_8902:0 ""
+VICTORY_POINTS_766:0 "" #STATE_960
+VICTORY_POINTS_8932:0 ""
+VICTORY_POINTS_2866:0 "" #STATE_949
+VICTORY_POINTS_3876:0 ""
+VICTORY_POINTS_2511:0 ""
+VICTORY_POINTS_9125:0 "" #STATE_951
+VICTORY_POINTS_8995:0 ""
+VICTORY_POINTS_8874:0 ""
+VICTORY_POINTS_8593:0 "" #STATE_961
+VICTORY_POINTS_9347:0 "" #Maarland
+VICTORY_POINTS_9167:0 "" #Oatmeal Island
 #######################################################################
 # Manehattan Confederation ############################################
 #######################################################################
