--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -501,7 +501,7 @@ VICTORY_POINTS_9018:0 ""
 VICTORY_POINTS_3817:0 "Мёрон" #Mörön
 VICTORY_POINTS_9045:0 "Святая Йакская Роща"
 VICTORY_POINTS_8872:0 "Ухте" #Uchte
-VICTORY_POINTS_4356:0 "Западный Ухте"
+VICTORY_POINTS_4356:0 "Западный Ухте" #West Uchte
 VICTORY_POINTS_9154:0 "" #STATE_935
 VICTORY_POINTS_3243:0 ""
 VICTORY_POINTS_8915:0 "" #STATE_1263
@@ -513,6 +513,8 @@ VICTORY_POINTS_793:0 ""
 VICTORY_POINTS_9286:0 "" #STATE_1260
 VICTORY_POINTS_9172:0 "" #STATE_1253
 VICTORY_POINTS_9008:0 "" #STATE_1262
+VICTORY_POINTS_8704:0 "" #STATE_1264
+VICTORY_POINTS_8417:0 "" #STATE_1265
 #MRF - Monarchist Restoration Front
 VICTORY_POINTS_3065:0 "Зеркшед Скалл" #Zerkshed Skäll
 VICTORY_POINTS_9047:0 "Северный Зеркшед Скалл"
@@ -522,6 +524,23 @@ VICTORY_POINTS_9346:0 "Западная Нуво Аквила"
 VICTORY_POINTS_3229:0 "Северная Нуво Аквила"
 VICTORY_POINTS_9266:0 "Порт Нуво Аквилы"
 VICTORY_POINTS_8833:0 "Клаувитз" #Klauwitz
+VICTORY_POINTS_9078:0 "" #STATE_946
+VICTORY_POINTS_4245:0 "" #STATE_947
+VICTORY_POINTS_125:0 ""
+VICTORY_POINTS_9053:0 "" #STATE_958
+VICTORY_POINTS_9090:0 ""
+VICTORY_POINTS_8902:0 ""
+VICTORY_POINTS_766:0 "" #STATE_960
+VICTORY_POINTS_8932:0 ""
+VICTORY_POINTS_2866:0 "" #STATE_949
+VICTORY_POINTS_3876:0 ""
+VICTORY_POINTS_2511:0 ""
+VICTORY_POINTS_9125:0 "" #STATE_951
+VICTORY_POINTS_8995:0 ""
+VICTORY_POINTS_8874:0 ""
+VICTORY_POINTS_8593:0 "" #STATE_961
+VICTORY_POINTS_9347:0 "" #Maarland
+VICTORY_POINTS_9167:0 "" #Oatmeal Island
 #######################################################################
 # Manehattan Confederation ############################################
 #######################################################################
