States and vp GRF - Nova Griffonia

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -445,6 +445,37 @@ VICTORY_POINTS_1651:0 "STATE_1270" #STATE_1270
 VICTORY_POINTS_2556:0 "Восточный STATE_1270"
 VICTORY_POINTS_7700:0 "Южный STATE_1270"
 VICTORY_POINTS_3432:0 "Фростхилл" #Frosthill
+VICTORY_POINTS_2596:0 "" #STATE_944
+VICTORY_POINTS_5255:0 ""
+VICTORY_POINTS_4842:0 "" #STATE_1297
+VICTORY_POINTS_8331:0 ""
+VICTORY_POINTS_8101:0 ""
+VICTORY_POINTS_7795:0 "" #STATE_1298
+VICTORY_POINTS_1916:0 "" #STATE_1299
+VICTORY_POINTS_641:0 ""
+VICTORY_POINTS_4279:0 "" #STATE_1296
+VICTORY_POINTS_7871:0 "" #STATE_1287
+VICTORY_POINTS_1107:0 "" #STATE_1286
+VICTORY_POINTS_2514:0 "" #STATE_939
+VICTORY_POINTS_8577:0 "" #STATE_938
+VICTORY_POINTS_8514:0 "" #STATE_1294
+VICTORY_POINTS_8014:0 "" #STATE_1293
+VICTORY_POINTS_7870:0 "" #STATE_1285
+VICTORY_POINTS_8108:0 "" #STATE_1292
+VICTORY_POINTS_2127:0 "" #STATE_1291
+VICTORY_POINTS_5184:0 "" #STATE_1289
+VICTORY_POINTS_4000:0 "" #STATE_1290
+VICTORY_POINTS_1705:0 "" #STATE_1288
+VICTORY_POINTS_7566:0 "" #STATE_1269
+VICTORY_POINTS_7277:0 "" #STATE_1271
+VICTORY_POINTS_1290:0 "" #STATE_1272
+VICTORY_POINTS_73:0 ""
+VICTORY_POINTS_7637:0 "" #STATE_1278
+VICTORY_POINTS_7423:0 "" #STATE_1273
+VICTORY_POINTS_4296:0 "" #STATE_1275
+VICTORY_POINTS_2199:0 "" #STATE_1274
+VICTORY_POINTS_7551:0 "" #STATE_1277
+VICTORY_POINTS_5000:0 ""
 #GFF - Frontier
 VICTORY_POINTS_4936:0 "Тсасбаатар" #Tsasbaatar
 VICTORY_POINTS_7464:0 "Западный Тсасбаатар"
