--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -484,6 +484,21 @@ VICTORY_POINTS_7440:0 "East Tsasbaatar"
 VICTORY_POINTS_7648:0 "Röhrig" #Röhrig
 VICTORY_POINTS_7649:0 "East Röhrig"
 VICTORY_POINTS_7606:0 "Bruchhagen" #Bruchhagen
+VICTORY_POINTS_7475:0 "" #STATE_1222
+VICTORY_POINTS_1118:0 "" #STATE_1268
+VICTORY_POINTS_1668:0 ""
+VICTORY_POINTS_7782:0 "" #STATE_1228
+VICTORY_POINTS_8012:0 ""
+VICTORY_POINTS_4338:0 "" #STATE_1227
+VICTORY_POINTS_7474:0 ""
+VICTORY_POINTS_7792:0 "" #STATE_1219
+VICTORY_POINTS_7627:0 ""
+VICTORY_POINTS_7512:0 "" #STATE_1218
+VICTORY_POINTS_7842:0 "" #STATE_1217
+VICTORY_POINTS_3008:0 "" #STATE_1215
+VICTORY_POINTS_1803:0 "" #STATE_1226
+VICTORY_POINTS_7393:0 "" #STATE_1225
+VICTORY_POINTS_:0 "" #
 #ALH - Alexhafen
 VICTORY_POINTS_7371:0 "Alexhafen" #Alexhafen
 #BFJ - Boreasfjord
