States and vp PLV - Plume Ville & WET - Weter

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -498,7 +498,6 @@ VICTORY_POINTS_7842:0 "" #STATE_1217
 VICTORY_POINTS_3008:0 "" #STATE_1215
 VICTORY_POINTS_1803:0 "" #STATE_1226
 VICTORY_POINTS_7393:0 "" #STATE_1225
-VICTORY_POINTS_:0 "" #
 #ALH - Alexhafen
 VICTORY_POINTS_7371:0 "Alexhafen" #Alexhafen
 #BFJ - Boreasfjord
@@ -511,10 +510,21 @@ VICTORY_POINTS_8616:0 "South Weter"
 VICTORY_POINTS_8560:0 "Weter Port"
 VICTORY_POINTS_5628:0 "Industrial Weter"
 VICTORY_POINTS_8446:0 "North Weter"
+VICTORY_POINTS_8461:0 "" #STATE_969
+VICTORY_POINTS_2157:0 ""
+VICTORY_POINTS_8226:0 "" #STATE_968
+VICTORY_POINTS_4044:0 "" #STATE_971
+VICTORY_POINTS_8539:0 ""
+VICTORY_POINTS_8664:0 "" #STATE_967
+VICTORY_POINTS_8791:0 ""
 #LDC - Lüderclaw
 VICTORY_POINTS_4292:0 "Lüderclaw" #Lüderclaw
 #PLV - Plume Ville
 VICTORY_POINTS_4648:0 "Plume Ville" #Plume Ville
+VICTORY_POINTS_3722:0 "" #STATE_974
+VICTORY_POINTS_286:0 "" #STATE_963
+VICTORY_POINTS_101:0 "" #STATE_966
+VICTORY_POINTS_8754:0 ""
 #NWG - Ny Winghagen
 VICTORY_POINTS_10038:0 "Ny Winghagen" #Ny Winghagen
 VICTORY_POINTS_10102:0 "South Winghagen"
