--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -509,10 +509,21 @@ VICTORY_POINTS_8616:0 "Южный Вэтэр"
 VICTORY_POINTS_8560:0 "Вэтэрский Порт"
 VICTORY_POINTS_5628:0 "Пром Вэтэр"
 VICTORY_POINTS_8446:0 "Северный Вэтэр"
+VICTORY_POINTS_8461:0 "" #STATE_969
+VICTORY_POINTS_2157:0 ""
+VICTORY_POINTS_8226:0 "" #STATE_968
+VICTORY_POINTS_4044:0 "" #STATE_971
+VICTORY_POINTS_8539:0 ""
+VICTORY_POINTS_8664:0 "" #STATE_967
+VICTORY_POINTS_8791:0 ""
 #LDC - Lüderclaw
 VICTORY_POINTS_4292:0 "Людеркло" #Lüderclaw
 #PLV - Plume Ville
 VICTORY_POINTS_4648:0 "Плюм Вилль" #Plume Ville
+VICTORY_POINTS_3722:0 "" #STATE_974
+VICTORY_POINTS_286:0 "" #STATE_963
+VICTORY_POINTS_101:0 "" #STATE_966
+VICTORY_POINTS_8754:0 ""
 #NWG - Ny Winghagen
 VICTORY_POINTS_10038:0 "Ню Вингхаген" #Ny Winghagen
 VICTORY_POINTS_10102:0 "Южный Ню Вингхаген"
