States and vp LDC - Lüderclaw

--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -768,7 +768,7 @@
  STATE_767:0 "Пряничное"
  STATE_768:0 "Северхольм"
  STATE_769:0 "Новоржековск"
- STATE_770:0 "Южный Гансегейербург"
+ STATE_770:0 "Южный Ганзегайербург"
  STATE_771:0 "Дроздный"
  STATE_772:0 "Малиновка"
  STATE_773:0 "Кашино"
@@ -938,7 +938,7 @@
  STATE_937:0 "STATE_937"
  STATE_938:0 "STATE_938"
  STATE_939:0 "STATE_939"
- STATE_940:0 "Гансегейербург"
+ STATE_940:0 "Ганзегайербург"
  STATE_941:0 "Нию Мирабель"
  STATE_942:0 "STATE_942"
  STATE_943:0 "STATE_943"
@@ -1293,7 +1293,7 @@
  STATE_1292:0 "STATE_1292"
  STATE_1293:0 "STATE_1293"
  STATE_1294:0 "STATE_1294"
- STATE_1295:0 "Западный Гансегейербург"
+ STATE_1295:0 "Западный Ганзегайербург"
  STATE_1296:0 "STATE_1296"
  STATE_1297:0 "STATE_1297"
  STATE_1298:0 "STATE_1298"
