--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -519,6 +519,9 @@ VICTORY_POINTS_8664:0 "" #STATE_967
 VICTORY_POINTS_8791:0 ""
 #LDC - Lüderclaw
 VICTORY_POINTS_4292:0 "Lüderclaw" #Lüderclaw
+VICTORY_POINTS_7815:0 "" #STATE_984
+VICTORY_POINTS_3844:0 "" #STATE_972
+VICTORY_POINTS_2029:0 "" #STATE_973
 #PLV - Plume Ville
 VICTORY_POINTS_4648:0 "Plume Ville" #Plume Ville
 VICTORY_POINTS_3722:0 "" #STATE_974
