States and vp BFJ - Boreasfjord

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -503,6 +503,10 @@ VICTORY_POINTS_7371:0 "Alexhafen" #Alexhafen
 #BFJ - Boreasfjord
 VICTORY_POINTS_7873:0 "Boreasfjord" #Boreasfjord
 VICTORY_POINTS_7882:0 "Boreasfjord Port"
+VICTORY_POINTS_3838:0 "" #STATE_975
+VICTORY_POINTS_7893:0 "" #STATE_977
+VICTORY_POINTS_7853:0 "" #STATE_978
+VICTORY_POINTS_7609:0 "" #STATE_983
 #WET - Weter
 VICTORY_POINTS_8484:0 "Weter" #Weter
 VICTORY_POINTS_8527:0 "West Weter"
