--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -502,6 +502,10 @@ VICTORY_POINTS_7371:0 "Алексхафен" #Alexhafen
 #BFJ - Boreasfjord
 VICTORY_POINTS_7873:0 "Борейфьорд" #Boreasfjord
 VICTORY_POINTS_7882:0 "Борейфьордский Порт"
+VICTORY_POINTS_3838:0 "" #STATE_975
+VICTORY_POINTS_7893:0 "" #STATE_977
+VICTORY_POINTS_7853:0 "" #STATE_978
+VICTORY_POINTS_7609:0 "" #STATE_983
 #WET - Weter
 VICTORY_POINTS_8484:0 "Вэтэр" #Weter
 VICTORY_POINTS_8527:0 "Западный Вэтэр"
