States and vp ALH - Alexhafen

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -499,6 +499,9 @@ VICTORY_POINTS_1803:0 "" #STATE_1226
 VICTORY_POINTS_7393:0 "" #STATE_1225
 #ALH - Alexhafen
 VICTORY_POINTS_7371:0 "Алексхафен" #Alexhafen
+VICTORY_POINTS_7516:0 "" #STATE_979
+VICTORY_POINTS_7639:0 "" #STATE_980
+VICTORY_POINTS_7322:0 "" #STATE_982
 #BFJ - Boreasfjord
 VICTORY_POINTS_7873:0 "Борейфьорд" #Boreasfjord
 VICTORY_POINTS_7882:0 "Борейфьордский Порт"
