--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -500,6 +500,10 @@ VICTORY_POINTS_1803:0 "" #STATE_1226
 VICTORY_POINTS_7393:0 "" #STATE_1225
 #ALH - Alexhafen
 VICTORY_POINTS_7371:0 "Alexhafen" #Alexhafen
+VICTORY_POINTS_7516:0 "" #STATE_979
+VICTORY_POINTS_7639:0 "" #STATE_980
+VICTORY_POINTS_7322:0 "" #STATE_982
+VICTORY_POINTS_7427:0 ""
 #BFJ - Boreasfjord
 VICTORY_POINTS_7873:0 "Boreasfjord" #Boreasfjord
 VICTORY_POINTS_7882:0 "Boreasfjord Port"
