States and vp CNC - Northern Cities

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -557,6 +557,7 @@ VICTORY_POINTS_456:0 "STATE_987" #STATE_987
 VICTORY_POINTS_6483:0 "Гроенштейн" #Groenstein
 VICTORY_POINTS_6512:0 "STATE_991" #STATE_991
 VICTORY_POINTS_6160:0 "STATE_1013" #STATE_1013
+VICTORY_POINTS_6168:0 "STATE_1011" #STATE_1011
 #MOR - Morien
 VICTORY_POINTS_6797:0 "STATE_1017" #STATE_1017
 #GLF - Griffonian Liberation Front
