States and vp MOR - Morien

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -560,6 +560,13 @@ VICTORY_POINTS_6160:0 "STATE_1013" #STATE_1013
 VICTORY_POINTS_6168:0 "STATE_1011" #STATE_1011
 #MOR - Morien
 VICTORY_POINTS_6797:0 "STATE_1017" #STATE_1017
+VICTORY_POINTS_6413:0 "" #STATE_1016
+VICTORY_POINTS_6384:0 "" #STATE_1014
+VICTORY_POINTS_6554:0 ""
+VICTORY_POINTS_4434:0 "" #STATE_1018
+VICTORY_POINTS_7072:0 "" #STATE_1019
+VICTORY_POINTS_7195:0 "" #STATE_1279
+VICTORY_POINTS_6928:0 "" #STATE_986
 #GLF - Griffonian Liberation Front
 VICTORY_POINTS_1477:0 "Клув Хот" #Kluv Khot
 VICTORY_POINTS_9062:0 "Восточный Клув Хот"
