States and vp ALB - Albion

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -677,6 +677,14 @@ VICTORY_POINTS_753:0 "STATE_736" #STATE_736
 #ALB - Albion
 VICTORY_POINTS_12689:0 "Альбион" #Albion
 VICTORY_POINTS_12367:0 "Лесное" #Lesnoye
+VICTORY_POINTS_2879:0 "" #STATE_726
+VICTORY_POINTS_1940:0 ""
+VICTORY_POINTS_2241:0 "" #STATE_733
+VICTORY_POINTS_12422:0 ""
+VICTORY_POINTS_4304:0 "" #STATE_723
+VICTORY_POINTS_3315:0 "" #STATE_725
+VICTORY_POINTS_12568:0 "" #STATE_734
+VICTORY_POINTS_12703:0 ""
 #FRV - Fairville
 VICTORY_POINTS_13180:0 "Фэйрвилль" #Fairville
 #MNT - Moontown
