--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -676,6 +676,12 @@ VICTORY_POINTS_12719:0 "Detrot" #Detrot
 VICTORY_POINTS_874:0 "Prance" #Prance
 VICTORY_POINTS_12688:0 "STATE_457" #STATE_457
 VICTORY_POINTS_753:0 "STATE_736" #STATE_736
+VICTORY_POINTS_5566:0 "" #STATE_738
+VICTORY_POINTS_5680:0 ""
+VICTORY_POINTS_12664:0 "" #STATE_737
+VICTORY_POINTS_2144:0 "" #STATE_486
+VICTORY_POINTS_12916:0 "" #STATE_463
+VICTORY_POINTS_2604:0 "" #STATE_464
 #ALB - Albion
 VICTORY_POINTS_12689:0 "Albion" #Albion
 VICTORY_POINTS_12367:0 "Lesnoye" #Lesnoye
