States and vp ZAR - Zarechje

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -666,8 +666,19 @@ VICTORY_POINTS_12557:0 "South Gallopolis"
 VICTORY_POINTS_12493:0 "North Gallopolis"
 #ZAR - Zarechje
 VICTORY_POINTS_905:0 "Veliky Southgorod" #Veliky Southgorod
+VICTORY_POINTS_12104:0 ""
 VICTORY_POINTS_2787:0 "Kobyliakovo" #Kobyliakovo
+VICTORY_POINTS_12259:0 ""
 VICTORY_POINTS_12036:0 "Ponchiki" #Ponchiki
+VICTORY_POINTS_4720:0 ""
+VICTORY_POINTS_12159:0 "" #STATE_747
+VICTORY_POINTS_12225:0 ""
+VICTORY_POINTS_12081:0 "" #STATE_745
+VICTORY_POINTS_12286:0 ""
+VICTORY_POINTS_4400:0 "" #STATE_743
+VICTORY_POINTS_12226:0 ""
+VICTORY_POINTS_12119:0 ""
+VICTORY_POINTS_12258:0 ""
 #HRF - Hornfield
 VICTORY_POINTS_12457:0 "Hornfield" #Hornfield
 #DET - Detrot
