States and vp HRF - Hornfield

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -679,6 +679,8 @@ VICTORY_POINTS_12119:0 ""
 VICTORY_POINTS_12258:0 ""
 #HRF - Hornfield
 VICTORY_POINTS_12457:0 "Хорнфилд" #Hornfield
+VICTORY_POINTS_2333:0 "" #STATE_487
+VICTORY_POINTS_12465:0 "" #STATE_488
 #DET - Detrot
 VICTORY_POINTS_12719:0 "Детрот" #Detrot
 #PRA - Prance
