--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -679,8 +679,10 @@ VICTORY_POINTS_4400:0 "" #STATE_743
 VICTORY_POINTS_12226:0 ""
 VICTORY_POINTS_12119:0 ""
 VICTORY_POINTS_12258:0 ""
-#HRF - Hornfield
+#HRF - Hornfield (Very horny)
 VICTORY_POINTS_12457:0 "Hornfield" #Hornfield
+VICTORY_POINTS_2333:0 "" #STATE_487
+VICTORY_POINTS_12465:0 "" #STATE_488
 #DET - Detrot
 VICTORY_POINTS_12719:0 "Detrot" #Detrot
 #PRA - Prance
