--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -662,6 +662,9 @@ VICTORY_POINTS_4995:0 "Стратусбург" #Stratusburg
 VICTORY_POINTS_2884:0 "Галлополис" #Gallopolis
 VICTORY_POINTS_12557:0 "Южный Галлополис"
 VICTORY_POINTS_12493:0 "Северный Галлополис"
+VICTORY_POINTS_4952:0 "" #STATE_489
+VICTORY_POINTS_12321:0 "" #STATE_490
+VICTORY_POINTS_12333:0 "" #STATE_491
 #ZAR - Zarechje
 VICTORY_POINTS_905:0 "Veliky Southgorod" #Veliky Southgorod
 VICTORY_POINTS_12104:0 ""
