Названия городов для Северяны

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -727,7 +727,7 @@
  STATE_726:0 "STATE_726"
  STATE_727:0 "Zelenogradsk"
  STATE_728:0 "Somland"
- STATE_729:0 "STATE_729"
+ STATE_729:0 "Kaurskiye Islands"
  STATE_730:0 "Tikhorechenskoye"
  STATE_731:0 "Lesnoye"
  STATE_732:0 "STATE_732"
@@ -739,7 +739,7 @@
  STATE_738:0 "STATE_738"
  STATE_739:0 "Kobyliakovo"
  STATE_740:0 "Kobylkyno"
- STATE_741:0 "STATE_741"
+ STATE_741:0 "Krasnyy Ostrog"
  STATE_742:0 "Veliky Southgorod"
  STATE_743:0 "STATE_743"
  STATE_744:0 "STATE_744"
@@ -751,20 +751,20 @@
  STATE_750:0 "Mirazh"
  STATE_751:0 "STATE_751"
  STATE_752:0 "Bordo"
- STATE_753:0 "STATE_753"
- STATE_754:0 "STATE_754"
+ STATE_753:0 "Darugi"
+ STATE_754:0 "Uglezhogovo"
  STATE_755:0 "Krasnoye Serdtse"
- STATE_756:0 "STATE_756"
- STATE_757:0 "STATE_757"
- STATE_758:0 "STATE_758"
+ STATE_756:0 "Verkhneyelovsk"
+ STATE_757:0 "Trukhlyavoye"
+ STATE_758:0 "Plotbishche"
  STATE_759:0 "Novochernushsk"
  STATE_760:0 "STATE_760"
  STATE_761:0 "Loshadsk"
  STATE_762:0 "Nizhny Novokopitsk"
  STATE_763:0 "Krupochkino"
  STATE_764:0 "Severskoye"
- STATE_765:0 "STATE_765"
- STATE_766:0 "STATE_766"
+ STATE_765:0 "Chelobitnoe"
+ STATE_766:0 "Savrast"
  STATE_767:0 "Pryanichnoye"
  STATE_768:0 "Severokholm"
  STATE_769:0 "Novorzhekovsk"
@@ -774,16 +774,16 @@
  STATE_773:0 "Kashino"
  STATE_774:0 "Landish Fields"
  STATE_775:0 "Kon'linskie Islands"
- STATE_776:0 "STATE_776"
+ STATE_776:0 "Otborsk" #Otborsk
  STATE_777:0 "St. Petershoof"
  STATE_778:0 "Skakunsk"
  STATE_779:0 "Korolevskiy Island"
  STATE_780:0 "Sedlovsk"
- STATE_781:0 "STATE_781"
+ STATE_781:0 "Wuelens"
  STATE_782:0 "Skull Island"
  STATE_783:0 "Pluga"
  STATE_784:0 "Trottingham"
- STATE_785:0 "STATE_785"
+ STATE_785:0 "Holmogory" #Holmogory
  STATE_786:0 "Azkaban"
  STATE_787:0 "Stavropon"
  STATE_788:0 "Solntsevo"
@@ -804,10 +804,10 @@
  STATE_803:0 "Severgradskiy Okrug"
  STATE_804:0 "Zayatsk"
  STATE_805:0 "St. Altidiysk"
- STATE_806:0 "STATE_806"
+ STATE_806:0 "Naryl'sk"
  STATE_807:0 "STATE_807"
  STATE_808:0 "STATE_808"
- STATE_809:0 "STATE_809"
+ STATE_809:0 "Sahard"
  STATE_810:0 "STATE_810"
  STATE_811:0 "STATE_811"
  STATE_812:0 "STATE_812"
@@ -826,11 +826,11 @@
  STATE_825:0 "STATE_825"
  STATE_826:0 "Zvezdopadovo"
  STATE_827:0 "STATE_827"
- STATE_828:0 "Town Up North"
- STATE_829:0 "STATE_829"
+ STATE_828:0 "Kalininberg" #Kalininberg
+ STATE_829:0 "Gumbinnen"
  STATE_830:0 "Heringsdorf"
- STATE_831:0 "STATE_831"
- STATE_832:0 "STATE_832"
+ STATE_831:0 "Tapiau"
+ STATE_832:0 "Tilsit" #Tilsit
  STATE_833:0 "STATE_833"
  STATE_834:0 "STATE_834"
  STATE_835:0 "Haukhamn"
@@ -856,7 +856,7 @@
  STATE_855:0 "STATE_855"
  STATE_856:0 "Bezdna"
  STATE_857:0 "Bukhovo"
- STATE_858:0 "STATE_858"
+ STATE_858:0 "Berest'e"
  STATE_859:0 "STATE_859"
  STATE_860:0 "Canterine"
  STATE_861:0 "STATE_861"
