--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -727,7 +727,7 @@
  STATE_726:0 "STATE_726"
  STATE_727:0 "Зеленоградск"
  STATE_728:0 "Сомлэнд"
- STATE_729:0 "STATE_729"
+ STATE_729:0 "Каурские Острова"
  STATE_730:0 "Тихореченское"
  STATE_731:0 "Лесное"
  STATE_732:0 "STATE_732"
@@ -739,7 +739,7 @@
  STATE_738:0 "STATE_738"
  STATE_739:0 "Кобыляково"
  STATE_740:0 "Кобылкино"
- STATE_741:0 "STATE_741"
+ STATE_741:0 "Красный Острог"
  STATE_742:0 "Великий Саутгород"
  STATE_743:0 "STATE_743"
  STATE_744:0 "STATE_744"
@@ -751,20 +751,20 @@
  STATE_750:0 "Мираж"
  STATE_751:0 "STATE_751"
  STATE_752:0 "Бордо"
- STATE_753:0 "STATE_753"
- STATE_754:0 "STATE_754"
+ STATE_753:0 "Даруги"
+ STATE_754:0 "Углежогово"
  STATE_755:0 "Красное Сердце"
- STATE_756:0 "STATE_756"
- STATE_757:0 "STATE_757"
- STATE_758:0 "STATE_758"
+ STATE_756:0 "Верхнееловск"
+ STATE_757:0 "Кижучск"
+ STATE_758:0 "Плотбище"
  STATE_759:0 "Новочернушск"
  STATE_760:0 "STATE_760"
  STATE_761:0 "Лошадск"
  STATE_762:0 "Нижний Новокопытск"
  STATE_763:0 "Крупочкино"
  STATE_764:0 "Северское"
- STATE_765:0 "STATE_765"
- STATE_766:0 "STATE_766"
+ STATE_765:0 "Челобитное"
+ STATE_766:0 "Савраст"
  STATE_767:0 "Пряничное"
  STATE_768:0 "Северхольм"
  STATE_769:0 "Новоржековск"
@@ -774,16 +774,16 @@
  STATE_773:0 "Кашино"
  STATE_774:0 "Земляные Поля"
  STATE_775:0 "Коньлинские Острова"
- STATE_776:0 "STATE_776"
+ STATE_776:0 "Отборск" #Otborsk
  STATE_777:0 "Санкт-Петерсхуф"
  STATE_778:0 "Скакунск"
  STATE_779:0 "Королевский Остров"
  STATE_780:0 "Седловск"
- STATE_781:0 "STATE_781"
+ STATE_781:0 "Уэльсен"
  STATE_782:0 "Остров Черепа"
  STATE_783:0 "Плуга"
  STATE_784:0 "Троттингем"
- STATE_785:0 "STATE_785"
+ STATE_785:0 "Холмогоры" #Holmogory
  STATE_786:0 "Азкабан"
  STATE_787:0 "Ставропонь"
  STATE_788:0 "Солнцево"
@@ -804,10 +804,10 @@
  STATE_803:0 "Северградский Округ"
  STATE_804:0 "Заяцк"
  STATE_805:0 "Санкт-Альтидийск"
- STATE_806:0 "STATE_806"
+ STATE_806:0 "Нарыльск"
  STATE_807:0 "STATE_807"
  STATE_808:0 "STATE_808"
- STATE_809:0 "STATE_809"
+ STATE_809:0 "Сахард"
  STATE_810:0 "STATE_810"
  STATE_811:0 "STATE_811"
  STATE_812:0 "STATE_812"
@@ -826,11 +826,11 @@
  STATE_825:0 "STATE_825"
  STATE_826:0 "Звездопадово"
  STATE_827:0 "STATE_827"
- STATE_828:0 "Северный Городок"
- STATE_829:0 "STATE_829"
+ STATE_828:0 "Калининберг" #Kalininberg
+ STATE_829:0 "Гумбиннен"
  STATE_830:0 "Герингсдорф"
- STATE_831:0 "STATE_831"
- STATE_832:0 "STATE_832"
+ STATE_831:0 "Тапиау"
+ STATE_832:0 "Тильзит" #Tilsit
  STATE_833:0 "STATE_833"
  STATE_834:0 "STATE_834"
  STATE_835:0 "Хаукхамн"
@@ -856,7 +856,7 @@
  STATE_855:0 "STATE_855"
  STATE_856:0 "Бездна"
  STATE_857:0 "Буково"
- STATE_858:0 "STATE_858"
+ STATE_858:0 "Берестье" #Berest'e
  STATE_859:0 "STATE_859"
  STATE_860:0 "Кантерин"
  STATE_861:0 "STATE_861"
