States and vp PNR - Pingland Republic

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -749,6 +749,19 @@ VICTORY_POINTS_5823:0 "South Dachaigh"
 VICTORY_POINTS_6183:0 "Ingstad" #Ingstad
 VICTORY_POINTS_6229:0 "West Ingstad"
 VICTORY_POINTS_3088:0 "Ingstad Port"
+VICTORY_POINTS_1098:0 "" #STATE_1020
+VICTORY_POINTS_5988:0 "" #STATE_1021
+VICTORY_POINTS_184:0 "" #STATE_1022
+VICTORY_POINTS_6152:0 ""
+VICTORY_POINTS_5900:0 "" #STATE_1023
+VICTORY_POINTS_5970:0 ""
+VICTORY_POINTS_2984:0 "" #STATE_1024
+VICTORY_POINTS_577:0 ""
+VICTORY_POINTS_5915:0 "" #STATE_1003
+VICTORY_POINTS_5856:0 "" #STATE_1002
+VICTORY_POINTS_4969:0 "" #STATE_1004
+VICTORY_POINTS_5750:0 "" #STATE_1005
+VICTORY_POINTS_5795:0 "" #STATE_1001
 #ALC - Alicornia
 VICTORY_POINTS_6150:0 "?" #Undiscovered city
 VICTORY_POINTS_1465:0 "?"
