States and vp PNG - Kingdom of Pingland

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -738,6 +738,23 @@ VICTORY_POINTS_5799:0 "Амундсен" #Amundsen
 VICTORY_POINTS_5829:0 "STATE_1010" #STATE_1010
 VICTORY_POINTS_5870:0 "STATE_1010 Порт"
 VICTORY_POINTS_5816:0 "Нансен" #Nansen
+VICTORY_POINTS_5778:0 ""
+VICTORY_POINTS_5757:0 "" #STATE_1006
+VICTORY_POINTS_5732:0 "" #STATE_1007
+VICTORY_POINTS_5749:0 ""
+VICTORY_POINTS_5766:0 "" #STATE_1008
+VICTORY_POINTS_5817:0 "" #STATE_1009
+VICTORY_POINTS_5876:0 "" #STATE_1077
+VICTORY_POINTS_5718:0 "" #STATE_1080
+VICTORY_POINTS_1501:0 "" #STATE_1081
+VICTORY_POINTS_4190:0 ""
+VICTORY_POINTS_5731:0 "" #STATE_1082
+VICTORY_POINTS_5893:0 "" #STATE_1084
+VICTORY_POINTS_5950:0 "" #STATE_1085
+VICTORY_POINTS_5985:0 "" #STATE_1086
+VICTORY_POINTS_5934:0 "" #STATE_1087
+VICTORY_POINTS_5810:0 ""
+VICTORY_POINTS_161:0 "" #STATE_1088
 #PNR - Pingland Republic
 VICTORY_POINTS_5790:0 "Дахаих" #Dachaigh
 VICTORY_POINTS_5733:0 "Северный Дахаих"
