States and vp AMN - Amundsen

--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -734,6 +734,16 @@ VICTORY_POINTS_6969:0 "Восточная Диамондия"
 VICTORY_POINTS_4465:0 "Свердруп" #Sverdrup
 #AMN - Amundsen
 VICTORY_POINTS_5799:0 "Амундсен" #Amundsen
+VICTORY_POINTS_4657:0 "" #STATE_1071
+VICTORY_POINTS_743:0 "" #STATE_1073
+VICTORY_POINTS_4444:0 "" #STATE_1072
+VICTORY_POINTS_5707:0 "" #STATE_1074
+VICTORY_POINTS_5708:0 ""
+VICTORY_POINTS_5740:0 "" #STATE_1090
+VICTORY_POINTS_3673:0 "" #STATE_1089
+VICTORY_POINTS_5741:0 "" #STATE_1076
+VICTORY_POINTS_5755:0 "" #STATE_1078
+VICTORY_POINTS_5841:0 "" #STATE_1079
 #PNG - Kingdom of Pingland
 VICTORY_POINTS_5829:0 "STATE_1010" #STATE_1010
 VICTORY_POINTS_5870:0 "STATE_1010 Порт"
